Addes Courses API and Swagger Regeneration
