# routes/index.js
@@ -4,5 +4,6 @@ router.get('/', (req, res) => {res.send('Welcome to my Second Project! 😉');
 });
 
 router.use("/users", require("./users"));
+router.use('/courses', require('./courses'));
 
 module.exports = router
